--- a/serverApi/package.json
+++ b/serverApi/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-exit-hook": "^2.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
