--- a/serverApi/package.json
+++ b/serverApi/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.0",
+    "mongoose-id-validator": "^0.6.0",
+    "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4"
   },
